# quackl_project

./: .gitignore  LICENSE  README.md  pyproject.toml
quackl/: __init__.py  cli.py  loader.py  querylib.py  rdfterms.py  schema.py  store.py  translator.py  validator.py
tests/: conftest.py  test_cli.py  test_loader.py  test_translator.py  test_validator.py
tests/files/: data.ttl  shapes.ttl
