[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quackl"
version = "0.1.0"
description = "DuckDB-backed SHACL validation by compilation into SQL."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Maxime Jakubowski", email = "maxime.jak@gmail.com" },
]
keywords = ["SHACL", "RDF", "validation", "DuckDB", "SQL"]
dependencies = [
    "rdflib>=6.0",
    "duckdb>=0.10",
    "slsparser>=1.0",
]

[project.urls]
Homepage = "https://github.com/MaximeJakubowski/shaclsql-supplementary"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
quackl = "quackl.cli:main"

[tool.setuptools]
packages = ["quackl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
